--- a/src/main/webapp/modal-forms/settings/named-graphs/modal-graphgroup.html
+++ b/src/main/webapp/modal-forms/settings/named-graphs/modal-graphgroup.html
@@ -7,7 +7,7 @@
   <div class="modal-body">
   
   		<div class="form-group">
-                  <label class="col-xs-2 control-label">Name</label>
+                  <label class="col-xs-2 control-label">Partial Url</label>
                   <div class="col-xs-10">
                       <input type="text" class="form-control" id="name" name="name" ng-model="graphgroup.name" ng-disabled="!isNewGroup" required regex-validate="identifier" unique-identifier/>
                       <div class="error"  ng-show="graphgroupForm.name.$dirty && graphgroupForm.name.$invalid">Invalid field:
