--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -139,9 +139,15 @@
   <script src="lib/angular/1.2.27/angular-route.min.js"></script>
 
   <script src="lib/angular-route-segment/1.3.3/angular-route-segment.min.js"></script>
+  <!-- 
   <script src="lib/angular-file-upload-master/2.1.1/angular-file-upload-shim.min.js"></script>
   <script src="lib/angular-file-upload-master/2.1.1/angular-file-upload.min.js"></script>
   <script src="lib/angular-file-upload-master/2.1.1/FileAPI.min.js"></script>
+ -->
+  <script src="lib/ng-file-upload/4.0.0/ng-file-upload-shim.min.js"></script> 
+  <script src="lib/ng-file-upload/4.0.0/ng-file-upload.min.js"></script> 
+
+
   <script src="lib/angular-flash/angular-flash.min.js"></script>
   <script src="lib/angular-loading-bar/loading-bar.js"></script>
 
@@ -168,6 +174,9 @@
   <script src="js/services/components-service.js"></script>
   <script src="js/services/roles-service.js"></script>
   <script src="js/services/data-sources-service.js"></script>
+  <script src="js/services/co-evolution-service-local.js"></script>
+  <script src="js/services/import-rdf-service.js"></script>
+
   <!-- global controllers -->
   <script src="js/controllers.js"></script>
   <script src="js/login-controller.js"></script>
@@ -191,20 +200,25 @@
   <!-- settings controllers -->
   <script src="js/settings/settings-controller.js"></script>
   <script src="js/settings/named-graphs/graphs-controller.js"></script>
+  <script src="js/settings/named-graphs/version-graph-group-controller.js"></script>
   <script src="js/settings/data-sources/endpoint-controller.js"></script>
   <script src="js/settings/data-sources/database-controller.js"></script>
+  <script src="js/settings/data-sources/license-source-controller.js"></script>
   <script src="js/settings/namespaces/namespaces-controller.js"></script>
   <script src="js/settings/components/components-controller.js"></script>
   <!-- modal forms controllers -->
   <script src="modal-forms/modal-login-controller.js"></script>
   <script src="modal-forms/modal-signup-controller.js"></script>
   <script src="modal-forms/modal-change-pw-controller.js"></script>
+  <script src="modal-forms/modal-id-label-controller.js"></script>
+
   <script src="modal-forms/workbench/modal-job-controller.js"></script>
   <script src="modal-forms/workbench/modal-limes-job-controller.js"></script>
   <script src="modal-forms/settings/modal-roles-controller.js"></script>
   <script src="modal-forms/settings/modal-user-controller.js"></script>
   <script src="modal-forms/settings/named-graphs/modal-graph-controller.js"></script>
   <script src="modal-forms/settings/named-graphs/modal-graphgroup-controller.js"></script>
+  <script src="modal-forms/settings/named-graphs/modal-version-groups-controller.js"></script>
   <script src="modal-forms/settings/datasource/modal-endpoint-controller.js"></script>
   <script src="modal-forms/settings/datasource/modal-database-controller.js"></script>
 
