--- a/src/main/webapp/js/settings/named-graphs/graphs.html
+++ b/src/main/webapp/js/settings/named-graphs/graphs.html
@@ -1,17 +1,55 @@
 <h3 class="green bold">Named Graphs Management</h3>
 
-<div ng-controller="GraphCtrl">
-
-  <button ng-if="isUserAuthenticated()" type="button" class="btn btn-success btn-large" ng-click="new();">Add new graph</button>
-
-  <h4 ng-if="isUserAuthenticated()" >User Graphs</h4>
-  <table ng-if="isUserAuthenticated()" class="table table-striped">
+<div ng-if="isUserAuthenticated()" ng-controller="GraphCtrl">
+  <button type="button" class="btn btn-success btn-large" ng-click="newVersionGroup();">Add Graph Set</button>
+   <h4>Named Graph Sets</h4>
+   
+  <table class="table table-striped">
   <thead>
     <tr>
       <th>Action</th>
-      <th>URI</th>
+      <th>Identifier</th>
       <th>Label</th>
       <th>Description</th>
+      <th>URI</th>
+      <th>Created</th>
+      <th>Graphs</th>
+    </tr>
+  </thead>
+  <tbody>
+     <tr ng-repeat="vgroup in versionGroups" ng-controller="VersionGGCtrl">
+      <td>
+        <button type="button" class="btn btn-default btn-xs" ng-click="deleteVersionGroup()"><span class="glyphicon glyphicon-trash"></span></button>
+        <button type="button" class="btn btn-default btn-xs" ng-click="addVersionedGraph()" data-toggle="tooltip" data-placement="top" title="Add graph">
+            <span class="glyphicon glyphicon-plus"></span></button>   
+      </td>
+      <td>{{vgroup.identifier}}</td>
+      <td>{{vgroup.label}}</td>
+      <td>{{vgroup.description}}</td>
+      <td>{{uriBase + vgroup.identifier +"/"}}</td>
+      <td>{{vgroup.created}}</td>
+      <td>
+          <ul class="list-unstyled">
+            <li ng-repeat="vgg in vgroup.graphs">{{vgg}}</li>
+          </ul>
+          <!-- <select ng-model="vgraphSelected" ng-options="namedgraph.name as namedgraph.name for namedgraph in allgraphs | filter:graphInGroup() " value="">
+            <option value="">-- leave empty to create new --</option></select> -->
+          
+      </td>
+    </tr>
+  </tbody>
+  </table>
+
+  
+  <button type="button" class="btn btn-success btn-large" ng-click="new(null);">Add new graph</button>
+  <h4>User Graphs</h4>
+  <table class="table table-striped">
+  <thead>
+    <tr>
+      <th>Action</th>
+      <th>Label</th>
+      <th>Description</th>
+      <th>URI</th>
       <th>Created</th>
       <th>Modified</th>
       <th>Public Access</th>
@@ -23,11 +61,11 @@
      <tr ng-repeat="namedgraph in namedgraphs">
       <td>
         <button type="button" class="btn btn-default btn-xs" ng-click="delete(namedgraph.name)"><span class="glyphicon glyphicon-trash"></span></button>
-        <button type="button" class="btn btn-default btn-xs" data-toggle="modal" data-target="#modalGraph" ng-click="edit(namedgraph.name);"><span class="glyphicon glyphicon-edit"></span></button>
+        <button type="button" class="btn btn-default btn-xs" ng-click="edit(namedgraph.name);"><span class="glyphicon glyphicon-edit"></span></button>
       </td>
-      <td>{{namedgraph.name}}</td>
       <td>{{namedgraph.graph.label}}</td>
       <td>{{namedgraph.graph.description}}</td>
+      <td>{{namedgraph.name}}</td>
       <td>{{namedgraph.graph.created}}</td>
       <td>{{namedgraph.graph.modified}}</td>
       <td>{{accessModes[namedgraph.publicAccess]}}</td>
@@ -95,7 +133,7 @@
     <table class="table table-striped">
         <thead>
         <tr>
-            <th ng-if="isUserAuthenticated()">Action</th>
+            <th>Action</th>
             <th>URI</th>
             <th>Label</th>
             <th>Description</th>
@@ -110,7 +148,7 @@
         <tbody>
         <!-- <tr ng-repeat="namedgraph in allgraphs | filter:graphFilter"> -->
         <tr ng-repeat="namedgraph in allgraphs">
-            <td ng-if="isUserAuthenticated()">
+            <td>
                 <button type="button" class="btn btn-default btn-xs" ng-click="deleteForeign('namedgraph.name')"><span class="glyphicon glyphicon-trash"></span></button>
                 <button type="button" class="btn btn-default btn-xs" data-toggle="modal" data-target="#modalGraph" ng-click="editAdmin('namedgraph.name');"><span class="glyphicon glyphicon-edit"></span></button>
             </td>
@@ -138,8 +176,7 @@
 
   <br/>
 
-  <button ng-if="isUserAuthenticated()" type="button" class="btn btn-success btn-large" ng-click="newGroup();">Add new graph group</button>
-
+  <button type="button" class="btn btn-success btn-large" ng-click="newGroup();">Add new graph group</button>
   <h4>
       <span class="btn-group">
           <button type="button" class="btn btn-link reset" ng-click="refreshGraphGroups()">
@@ -148,11 +185,10 @@
       </span>
       Graph Groups
   </h4>
-
   <table class="table table-striped">
       <thead>
       <tr>
-          <th ng-if="isUserAuthenticated()">Action</th>
+          <th>Action</th>
           <th>URI</th>
           <th>Label</th>
           <th>Description</th>
@@ -163,7 +199,7 @@
       </thead>
       <tbody>
       <tr ng-repeat="gg in graphgroups">
-          <td ng-if="isUserAuthenticated()">
+          <td>
               <button type="button" class="btn btn-default btn-xs" ng-click="deleteGroup('gg.name')"><span class="glyphicon glyphicon-trash"></span></button>
               <button type="button" class="btn btn-default btn-xs" data-toggle="modal" data-target="#modalGroup" ng-click="editGroup('gg.name');"><span class="glyphicon glyphicon-edit"></span></button>
           </td>
