added more graphs change updates, and coev application UI

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -225,6 +225,9 @@
   <!-- directives -->
   <script src="js/directives.js"></script>
 
+  <!-- filters -->
+  <script src="js/filters.js"></script>
+
 </body>
 
 </html> 
