--- a/src/main/webapp/js/workbench/classification-and-enrichment/deer.html
+++ b/src/main/webapp/js/workbench/classification-and-enrichment/deer.html
@@ -179,7 +179,7 @@
 	<div class="col-xs-2"></div>
 	<div class="row col-xs-10" ng-show="startButton">
 		<div class="col-xs-2">
-		  <a class="btn btn-sm btn-success btn-block" ng-click="LaunchGeoLift()">Start GeoLift</a>
+		  <a class="btn btn-sm btn-success btn-block" ng-click="LaunchGeoLift()">Create Job</a>
 		</div>
 	</div>
 	</div>
