--- a/src/main/webapp/js/settings/named-graphs/graphs.html
+++ b/src/main/webapp/js/settings/named-graphs/graphs.html
@@ -13,7 +13,7 @@
       <th>Description</th>
       <th>URI</th>
       <th>Created</th>
-      <th>Graphs</th>
+      <th>Versions</th>
     </tr>
   </thead>
   <tbody>
@@ -48,10 +48,11 @@
     <tr>
       <th>Action</th>
       <th>Label</th>
-      <th>Description</th>
       <th>URI</th>
+      <th>Triples</th>
       <th>Created</th>
       <th>Modified</th>
+      <th>Issued</th>
       <th>Public Access</th>
       <th>Read Access</th>
       <th>Write Access</th>
@@ -60,14 +61,16 @@
   <tbody>
      <tr ng-repeat="namedgraph in namedgraphs">
       <td>
-        <button type="button" class="btn btn-default btn-xs" ng-click="delete(namedgraph.name)"><span class="glyphicon glyphicon-trash"></span></button>
+        <button type="button" class="btn btn-default btn-xs" ng-confirm-click="delete(namedgraph.name)" ng-confirm-message="Are you sure you want to delete this graph?"><span class="glyphicon glyphicon-trash"></span></button>
         <button type="button" class="btn btn-default btn-xs" ng-click="edit(namedgraph.name);"><span class="glyphicon glyphicon-edit"></span></button>
+        <button ng-show="namedgraph.graph.issued==''" type="button" class="btn btn-default btn-xs" ng-confirm-click="issue(namedgraph.name);"  ng-confirm-message="The graph will be issued now..."><span class="glyphicon glyphicon-ok"></span></button>
       </td>
       <td>{{namedgraph.graph.label}}</td>
-      <td>{{namedgraph.graph.description}}</td>
       <td>{{namedgraph.name}}</td>
+      <td>{{namedgraph.graph.triples}}</td>
       <td>{{namedgraph.graph.created}}</td>
       <td>{{namedgraph.graph.modified}}</td>
+      <td>{{namedgraph.graph.issued}}</td>
       <td>{{accessModes[namedgraph.publicAccess]}}</td>
       <td>
           <ul class="list-unstyled">
