--- a/src/main/webapp/js/workbench/evolution-and-repair/coevolution-apply.html
+++ b/src/main/webapp/js/workbench/evolution-and-repair/coevolution-apply.html
@@ -10,38 +10,50 @@
 		<div class="form-group">
 			<label for="graph" class="col-xs-2 control-label">Context </label>
 			<div class="input-group col-sm-8">
-				<input type="text" id="context" name="context" class="form-control" ng-model="change.context" regex-validate="url" required>
+				<select id="contextGraph" class="form-control" ng-model="contextGraph" ng-options="namedgraph.name for namedgraph in namedGraphs | excludeFrom:targetGraph " required><option value=""></option></select>
 			</div>
 		</div>
 		<div class="form-group">
-			<label for="graph" class="col-xs-2 control-label">Graph </label>
+			<label for="graph" class="col-xs-2 control-label">Target Graph </label>
 			<div class="input-group col-sm-8">
-				<div class="input-group-btn">
-					<button type="button" class="btn btn-link reset" ng-click="refreshGraphList()">
-						<i class="glyphicon glyphicon-refresh" aria-hidden="false"></i>
-					</button>
-				</div>
-				<select id="targetGraph" class="form-control" ng-model="change.targetGraph" ng-options="namedgraph.name as graphLabel(namedgraph.name,namedgraph.graph.label) for namedgraph in namedGraphs" required></select>
+				<select id="targetGraph" class="form-control" ng-model="targetGraph" ng-options="namedgraph.name for namedgraph in namedGraphs | excludeFrom:contextGraph" required><option value=""></option></select>
+			</div>
+		</div>
+
+		<div class="form-group">
+			<label for="graph" class="col-xs-2 control-label">Conflict Resolution Strategy </label>
+			<div class="input-group col-sm-8">
+				<select id="strategy" class="form-control" ng-model="change.conflictResolution" ng-options="s for s in conflictResolutionStrategies" required></select>
 			</div>
 		</div>
 
 		<div class="form-group">
 			<label for="graph" class="col-xs-2 control-label">Filters </label>
 			<div class="input-group col-sm-8">
-				<input type="text" class="form-control" ng-model="change.filter" placeholder="dcterms:author <author-uri>">
-				<div class="input-group-btn">
-					<button type="button" class="btn btn-link reset" ng-click="">
+
+				<div class="row" ng-repeat="fi in filters">
+					<div class="col-xs-7">
+						<input type="text" class="form-control" ng-model="fi.exp" placeholder="dcterms:author <author-uri>" />
+					</div>
+					<div class="col-xs-1">
+						<button type="button" class="btn btn-link" ng-click="removeFilter(fi)">
+						<i class="glyphicon glyphicon-minus" aria-hidden="false"></i>
+						</button>
+					</div>
+				</div>
+				<div class="row">
+					<button type="button" class="btn btn-link" ng-click="addFilter()">
 						<i class="glyphicon glyphicon-plus" aria-hidden="false"></i>
 					</button>
 				</div>
 			</div>
+			
 		</div>
-
 
 	  <div class="form-group">
 			<div class="col-sm-2"></div>
 	  	<div class="input-group col-sm-8">
-      	<button class="btn btn-success" ng-click="" ng-disabled="changeForm.$invalid || isImporting()">Apply Change Request</button>
+      	<button class="btn btn-success" ng-click="apply()" ng-disabled="changeForm.$invalid || isImporting()">Apply Change Request</button>
      	</div>
     </div>
 	</form>
