add component configuration functionality

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -221,6 +221,7 @@
   <script src="modal-forms/settings/named-graphs/modal-version-groups-controller.js"></script>
   <script src="modal-forms/settings/datasource/modal-endpoint-controller.js"></script>
   <script src="modal-forms/settings/datasource/modal-database-controller.js"></script>
+  <script src="modal-forms/settings/components/modal-component-service-controller.js"></script>
 
   <!-- directives -->
   <script src="js/directives.js"></script>
